force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/Ethics_Alert_Template_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>Used to decide, based on several variables, which email template should be sent to users in the event of an Ethics update.</description>
    <label>Ethics Alert Template Matrix</label>
    <pluralLabel>Ethics Alert Template Matrices</pluralLabel>
</CustomObject>