force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/Application_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Application_Review_Outcome__c</fullName>
    <description>The Application Review Outcome on the object that should trigger this email.</description>
    <label>Application Review Outcome</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>