force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>API Name of Email Template we are sending</description>
    <label>Email Template Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>