force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To turn off this particular email alert, untick this button</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>