force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/I_RS_Ethics_Object__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Object__c</fullName>
    <description>The object initiating the email send</description>
    <label>Ethics Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethics_Request__c</fullName>
                <default>true</default>
                <label>Ethics_Request__c</label>
            </value>
            <value>
                <fullName>Ethics_Post_Approval__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>