force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/I_RS_Template_needs_Related_File_names__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Template_needs_Related_File_names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some templates are prescribed to show the names of all the related files under the Ethics Request. As that operation is slightly intensive, we only run that logic when we need it for a specific template.</description>
    <label>Template needs Related File names</label>
    <type>Checkbox</type>
</CustomField>