force-app/main/default/objects/Ethics_Alert_Template_Matrix__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Annual_Final_Reports</fullName>
            </value>
            <value>
                <fullName>Final_Reports</fullName>
            </value>
            <value>
                <fullName>General_Correspondence</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Adverse_Events_Safety_Reports</fullName>
            </value>
            <value>
                <fullName>Animal_Ethics_Application</fullName>
            </value>
            <value>
                <fullName>Human_Ethics_Application</fullName>
            </value>
            <value>
                <fullName>Biosafety_Ethics_Application</fullName>
            </value>
            <value>
                <fullName>Research_Governance_Authorisation</fullName>
            </value>
            <value>
                <fullName>I_RS_SOP_Phenotype_Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>